--- a/config/database.yml
+++ b/config/database.yml
@@ -52,3 +52,6 @@ production:
   database: my_portfolio_app_production
   username: my_portfolio_app
   password: <%= ENV['MY_PORTFOLIO_APP_DATABASE_PASSWORD'] %>
+  adapter: postgresql
+  encoding: unicode
+  pool: 5
